cmake_minimum_required(VERSION 3.0)

MACRO(SUBDIRLIST result curdir)
    FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
    SET(dirlist "")
    FOREACH(child ${children})
        IF(IS_DIRECTORY ${curdir}/${child})
            LIST(APPEND dirlist ${child})
        ENDIF()
    ENDFOREACH()
    SET(${result} ${dirlist})
ENDMACRO()

SUBDIRLIST(submodules ${CMAKE_CURRENT_LIST_DIR})
foreach(dir ${submodules})
    set(mod_name ${dir}_module)

    aux_source_directory(${dir}/src ${mod_name}_SRC)
    add_library(${mod_name} ${${mod_name}_SRC})
    target_include_directories(${mod_name} PRIVATE ${dir}/include)
    if (EXISTS "${CMAKE_CURRENT_LIST_DIR}/${dir}/CMakeLists.txt")
        include(${dir}/CMakeLists.txt)
    endif()
    SET(MOD_LIST ${MOD_LIST} ${mod_name})
    SET(MOD_DIR_LIST ${MOD_DIR_LIST} ${dir})
endforeach()

SET(MOD_LIST ${MOD_LIST} PARENT_SCOPE)
SET(MOD_DIR_LIST ${MOD_DIR_LIST} PARENT_SCOPE)
